Added two new utilities

--- a/renderer/units/Digital Clock/import.html
+++ b/renderer/units/Digital Clock/import.html
@@ -11,7 +11,7 @@
                     <option value="en">English</option>
                     <option value="en-AU">English (Australia)</option>
                     <option value="en-CA">English (Canada)</option>
-                    <option value="en-NZ">English (New Zeland)</option>
+                    <option value="en-NZ">English (New Zealand)</option>
                     <option value="en-GB">English (U.K.)</option>
                     <option value="en-US">English (U.S.)</option>
                     <option value="fr">French</option>
