--- a/renderer/units/LaTeX Math Renderer/import.html
+++ b/renderer/units/LaTeX Math Renderer/import.html
@@ -4,7 +4,7 @@
             <label>LaTeX:<textarea class="latex-formula" rows="8"></textarea></label>
             <div class="interface">
                 <span class="option">
-                    <label title="If checked, the math will be rendered in display mode; if unchecked, the math will be rendered in inline mode."><input type="checkbox" class="display-mode" value="Toto">&nbsp;Display Mode</label>
+                    <label title="If checked, the math will be rendered in display mode; if unchecked, the math will be rendered in inline mode."><input type="checkbox" class="display-mode">&nbsp;Display Mode</label>
                 </span>
                 <span class="option">
                     <button type="button" class="clear-button">Clear</button>
