Updated version to 1.2.0

--- a/renderer/units/HTTP Status Codes/import.html
+++ b/renderer/units/HTTP Status Codes/import.html
@@ -13,13 +13,9 @@
         <div class="accent-panel">
             <p><strong>References</strong>:</p>
             <ul>
-                <li>
-                    <a href="https://en.wikipedia.org/wiki/List_of_HTTP_status_codes">List of HTTP status codes - Wikipedia</a>
-                    <br>
-                    <a lang="fr" href="https://fr.wikipedia.org/wiki/Liste_des_codes_HTTP">Liste des codes HTTP — Wikipédia</a>
-                    <br>
-                    <a lang="ja" href="https://ja.wikipedia.org/wiki/HTTP%E3%82%B9%E3%83%86%E3%83%BC%E3%82%BF%E3%82%B9%E3%82%B3%E3%83%BC%E3%83%89">HTTPステータスコード - Wikipedia</a>
-                </li>
+                <li><a href="https://en.wikipedia.org/wiki/List_of_HTTP_status_codes">List of HTTP status codes - Wikipedia</a></li>
+                <li><a lang="fr" href="https://fr.wikipedia.org/wiki/Liste_des_codes_HTTP">Liste des codes HTTP — Wikipédia</a></li>
+                <li><a lang="ja" href="https://ja.wikipedia.org/wiki/HTTP%E3%82%B9%E3%83%86%E3%83%BC%E3%82%BF%E3%82%B9%E3%82%B3%E3%83%BC%E3%83%89">HTTPステータスコード - Wikipedia</a></li>
             </ul>
             <ul>
                 <li><a href="https://www.w3.org/Protocols/rfc2616/rfc2616-sec10.html">HTTP/1.1: Status Code Definitions</a></li>
