--- a/renderer/units/ISO Language Codes/import.html
+++ b/renderer/units/ISO Language Codes/import.html
@@ -1,6 +1,6 @@
 <template>
-    <section id="iso-country-codes-unit">
-        <h1>ISO 3166-1 Country Codes</h1>
+    <section id="iso-language-codes-unit">
+        <h1>ISO 639-1 Language Codes</h1>
         <div class="plain-panel">
             <div class="interface">
                 <input class="live-search" type="search">
@@ -10,8 +10,8 @@
         <div class="accent-panel">
             <p><strong>References</strong>:</p>
             <ul>
-                <li><a href="https://en.wikipedia.org/wiki/ISO_3166-1">ISO 3166-1 - Wikipedia</a></li>
-                <li><a lang="fr" href="https://fr.wikipedia.org/wiki/ISO_3166-1">ISO 3166-1 — Wikipédia</a></li>
+                <li><a href="https://en.wikipedia.org/wiki/List_of_ISO_639-1_codes">List of ISO 639-1 codes - Wikipedia</a></li>
+                <li><a lang="fr" href="https://fr.wikipedia.org/wiki/Liste_des_codes_ISO_639-1">Liste des codes ISO 639-1 — Wikipédia</a></li>
             </ul>
         </div>
     </section>
