--- a/renderer/units/Prefectures of Japan/import.html
+++ b/renderer/units/Prefectures of Japan/import.html
@@ -10,22 +10,14 @@
         <div class="accent-panel">
             <p lang="ja"><strong>参照</strong>:</p>
             <ul>
-                <li>
-                    <a lang="ja" href="https://ja.wikipedia.org/wiki/%E9%83%BD%E9%81%93%E5%BA%9C%E7%9C%8C">都道府県 - Wikipedia</a>
-                    <br>
-                    <a href="https://en.wikipedia.org/wiki/Prefectures_of_Japan">Prefectures of Japan - Wikipedia</a>
-                    <br>
-                    <a lang="fr" href="https://fr.wikipedia.org/wiki/Pr%C3%A9fectures_du_Japon">Préfectures du Japon — Wikipédia</a>
-                </li>
+                <li><a lang="ja" href="https://ja.wikipedia.org/wiki/%E9%83%BD%E9%81%93%E5%BA%9C%E7%9C%8C">都道府県 - Wikipedia</a></li>
+                <li><a href="https://en.wikipedia.org/wiki/Prefectures_of_Japan">Prefectures of Japan - Wikipedia</a></li>
+                <li><a lang="fr" href="https://fr.wikipedia.org/wiki/Pr%C3%A9fectures_du_Japon">Préfectures du Japon — Wikipédia</a></li>
             </ul>
             <ul>
-                <li>
-                    <a lang="ja" href="https://ja.wikipedia.org/wiki/%E6%97%A5%E6%9C%AC%E3%81%AE%E5%9C%B0%E5%9F%9F">日本の地域 - Wikipedia</a>
-                    <br>
-                    <a href="https://en.wikipedia.org/wiki/List_of_regions_of_Japan">List of regions of Japan - Wikipedia</a>
-                    <br>
-                    <a lang="fr" href="https://fr.wikipedia.org/wiki/R%C3%A9gions_du_Japon">Régions du Japon — Wikipédia</a>
-                </li>
+                <li><a lang="ja" href="https://ja.wikipedia.org/wiki/%E6%97%A5%E6%9C%AC%E3%81%AE%E5%9C%B0%E5%9F%9F">日本の地域 - Wikipedia</a></li>
+                <li><a href="https://en.wikipedia.org/wiki/List_of_regions_of_Japan">List of regions of Japan - Wikipedia</a></li>
+                <li><a lang="fr" href="https://fr.wikipedia.org/wiki/R%C3%A9gions_du_Japon">Régions du Japon — Wikipédia</a></li>
             </ul>
         </div>
     </section>
