--- a/renderer/units/Unicode Inspector/import.html
+++ b/renderer/units/Unicode Inspector/import.html
@@ -3,26 +3,30 @@
         <div class="plain-panel">
             <h2>Characters</h2>
             <p><input class="input-characters" type="text"></p>
-            <p><input class="output-codes" type="text" readonly></p>
+            <p><input class="output-code-points" type="text" readonly></p>
             <div class="interface">
                 <span class="option">
-                    <label><input type="checkbox" class="string-escapes">&nbsp;String Escapes</label>
+                    <label title="If checked, the Unicode code points are formatted as string escape sequences."><input type="checkbox" class="string-escapes">&nbsp;String Escapes</label>
                 </span>
                 <span class="option">
-                    <label><input type="checkbox" class="code-points">&nbsp;Code Points</label>
+                    <label title="If checked, the Unicode code points exclude surrogates."><input type="checkbox" class="scalar-values">&nbsp;Scalar Values</label>
                 </span>
                 <span class="option">
-                    <label><input type="checkbox" class="upper-case-hex">&nbsp;Upper Case Hex</label>
+                    <label title="If checked, the Unicode code points use upper case hexadecimal digits."><input type="checkbox" class="upper-case-hex">&nbsp;Upper Case Hex</label>
                 </span>
            </div>
         </div>
          <div class="plain-panel">
-            <h2>Codes</h2>
-            <p><input class="input-codes" type="text"></p>
+            <h2>Code Points</h2>
+            <p><input class="input-code-points" type="text"></p>
             <p><input class="output-characters" type="text" readonly></p>
         </div>
         <div class="accent-panel">
             <p><strong>References</strong>:</p>
+            <ul>
+                <li><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/String/charCodeAt">String.prototype.charCodeAt() - JavaScript | MDN</a></li>
+                <li><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/String/fromCharCode">String.fromCharCode() - JavaScript | MDN</a></li>
+            </ul>
             <ul>
                 <li><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/String/codePointAt">String.prototype.codePointAt() - JavaScript | MDN</a></li>
                 <li><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/String/fromCodePoint">String.fromCodePoint() - JavaScript | MDN</a></li>
@@ -34,8 +38,10 @@
             </ul>
             <ul>
                 <li><a href="https://en.wikipedia.org/wiki/Unicode">Unicode - Wikipedia</a></li>
+                <li><a href="https://en.wikipedia.org/wiki/Unicode_input">Unicode input - Wikipedia</a></li>
                 <li><a href="https://en.wikipedia.org/wiki/Combining_character">Combining character - Wikipedia</a></li>
                 <li><a href="https://en.wikipedia.org/wiki/Variant_form_(Unicode)">Variant form (Unicode) - Wikipedia</a></li>
+                <li><a href="https://en.wikipedia.org/wiki/List_of_Unicode_characters">List of Unicode characters - Wikipedia</a></li>
             </ul>
             <ul>
                 <li><a href="https://www.unicode.org/glossary/">Glossary</a></li>
