--- a/renderer/units/JSON Formatter/import.html
+++ b/renderer/units/JSON Formatter/import.html
@@ -1,10 +1,21 @@
 <template>
     <section id="json-formatter-unit">
         <div class="plain-panel">
-            <label>JSON:<textarea class="input-string" rows="12"></textarea></label>
-            <div class="interface">
-                <span class="option">
+            <div class="actions">
+                <span class="action">
+                    <button type="button" class="pull-down-menu samples-button">Samples</button>
+                </span>
+                <span class="action">
                     <button type="button" class="clear-button">Clear</button>
+                </span>
+            </div>
+            <label>JSON:<textarea class="input-string" rows="12"></textarea></label>
+            <div class="options">
+                <span class="option">
+                    <label title=""><input type="checkbox" class="expand-tabs">&nbsp;Expand Tabs</label>
+                </span>
+                <span class="option">
+                    <label title=""><input type="checkbox" class="append-line-break">&nbsp;Append Line Break</label>
                 </span>
             </div>
             <textarea class="output-string" rows="12" readonly></textarea>
@@ -13,9 +24,9 @@
             <p><strong>References</strong>:</p>
             <ul>
                 <li><a href="https://en.wikipedia.org/wiki/JSON">JSON - Wikipedia</a></li>
-                <li><a href="http://www.json.org/">JSON - Introducing JSON</a></li>
-                <li><a href="https://tools.ietf.org/html/rfc7159">RFC 7159 - The JavaScript Object Notation (JSON) Data Interchange Format</a></li>
-                <li><a href="http://www.ecma-international.org/publications/standards/Ecma-404.htm">Standard ECMA-404 - The JSON Data Interchange Format</a></li>
+                <li><a href="https://www.json.org/">JSON - Introducing JSON</a></li>
+                <li><a href="https://tools.ietf.org/html/rfc8259">RFC 8259 - The JavaScript Object Notation (JSON) Data Interchange Format</a></li>
+                <li><a href="https://www.ecma-international.org/publications/standards/Ecma-404.htm">Standard ECMA-404 - The JSON Data Interchange Format</a></li>
             </ul>
             <ul>
                 <li><a href="https://jsonlint.com/">JSONLint - The JSON Validator</a></li>
