--- a/renderer/units/JSON Formatter/import.html
+++ b/renderer/units/JSON Formatter/import.html
@@ -3,19 +3,26 @@
         <div class="plain-panel">
             <div class="actions">
                 <span class="action">
-                    <button type="button" class="pull-down-menu samples-button">Samples</button>
+                    <button type="button" class="clear-button">Clear</button>
                 </span>
                 <span class="action">
-                    <button type="button" class="clear-button">Clear</button>
+                    <button type="button" class="pull-down-menu samples-button">Samples</button>
                 </span>
             </div>
             <label>JSON:<textarea class="input-string" rows="12"></textarea></label>
             <div class="options">
                 <span class="option">
-                    <label title=""><input type="checkbox" class="expand-tabs">&nbsp;Expand Tabs</label>
+                    <select class="space-type">
+                        <option value="packed">Single line</option>
+                        <option value="tabs">Indented (Tabs)</option>
+                        <option value="spaces">Indented (Spaces)</option>
+                    </select>
                 </span>
                 <span class="option">
-                    <label title=""><input type="checkbox" class="append-line-break">&nbsp;Append Line Break</label>
+                    <label title=""><input type="checkbox" class="balanced-spacing">&nbsp;Balanced Spacing</label>
+                </span>
+                <span class="option">
+                    <label title=""><input type="checkbox" class="final-line-break">&nbsp;Final Line Break</label>
                 </span>
             </div>
             <textarea class="output-string" rows="12" readonly></textarea>
@@ -25,6 +32,7 @@
             <ul>
                 <li><a href="https://en.wikipedia.org/wiki/JSON">JSON - Wikipedia</a></li>
                 <li><a href="https://www.json.org/">JSON - Introducing JSON</a></li>
+                <li><a href="https://www.json.org/example.html">JSON Example</a></li>
                 <li><a href="https://tools.ietf.org/html/rfc8259">RFC 8259 - The JavaScript Object Notation (JSON) Data Interchange Format</a></li>
                 <li><a href="https://www.ecma-international.org/publications/standards/Ecma-404.htm">Standard ECMA-404 - The JSON Data Interchange Format</a></li>
             </ul>
