--- a/renderer/units/LaTeX Math Renderer/import.html
+++ b/renderer/units/LaTeX Math Renderer/import.html
@@ -2,14 +2,24 @@
     <section id="latex-math-renderer-unit">
         <div class="plain-panel">
             <div class="actions">
-                <span class="action">
-                    <button type="button" class="pull-down-menu samples-button">Samples</button>
+                <span class="action-group">
+                    <span class="action">
+                        <button type="button" class="clear-button">Clear</button>
+                    </span>
+                    <span class="action">
+                        <button type="button" class="pull-down-menu samples-button">Samples</button>
+                    </span>
                 </span>
-                <span class="action">
-                    <button type="button" class="clear-button">Clear</button>
+                <span class="action-group">
+                    <span class="action">
+                        <button type="button" class="load-button">Load...</button>
+                    </span>
+                    <span class="action">
+                        <button type="button" class="save-button">Save...</button>
+                    </span>
                 </span>
             </div>
-            <label>LaTeX:<textarea class="latex-formula" rows="8"></textarea></label>
+            <label>LaTeX:<textarea class="latex-formula" rows="10"></textarea></label>
             <div class="options">
                 <span class="option">
                     <label title="If checked, the math will be rendered in display mode; if unchecked, the math will be rendered in inline mode."><input type="checkbox" class="display-mode">&nbsp;Display Mode</label>
@@ -21,9 +31,11 @@
                     <label title="If checked, will throw a ParseError when it encounters an unsupported command; if unchecked, will render the unsupported command as text in color."><input type="checkbox" class="throw-on-error">&nbsp;Throw on Error</label>
                 </span>
             </div>
-            <div class="latex-rendering">
-                <div class="latex-container"></div>
-            </div>
+            <label>Rendering:
+                <div class="latex-rendering">
+                    <div class="latex-container"></div>
+                </div>
+            </label>
         </div>
         <div class="accent-panel">
             <p><strong>References</strong>:</p>
@@ -31,6 +43,7 @@
                 <li><a href="https://khan.github.io/KaTeX/">KaTeX – The fastest math typesetting library for the web</a></li>
                 <li><a href="https://github.com/Khan/KaTeX">GitHub - Khan/KaTeX: Fast math typesetting for the web.</a></li>
                 <li><a href="https://www.intmath.com/blog/mathematics/katex-a-new-way-to-display-math-on-the-web-9445">KaTeX - a new way to display math on the Web</a></li>
+                <li><a href="https://www.intmath.com/cg5/katex-mathjax-comparison.php">KaTeX and MathJax Comparison Demo</a></li>
                 <li><a href="https://khan.github.io/KaTeX/function-support.html">Function Support in KaTeX</a></li>
                 <li><a href="https://en.wikibooks.org/wiki/LaTeX/Mathematics">LaTeX/Mathematics - Wikibooks, open books for an open world</a></li>
                 <li><a href="https://en.wikibooks.org/wiki/LaTeX/Advanced_Mathematics">LaTeX/Advanced Mathematics - Wikibooks, open books for an open world</a></li>
