--- a/renderer/units/Technical Definitions/import.html
+++ b/renderer/units/Technical Definitions/import.html
@@ -24,6 +24,9 @@
                     <li><a href="https://en.wikipedia.org/wiki/Unit_prefix">Unit prefix - Wikipedia</a></li>
                     <li><a href="https://en.wikipedia.org/wiki/Metric_prefix">Metric prefix - Wikipedia</a></li>
                 </ul>
+                <ul>
+                    <li><a href="https://en.wikipedia.org/wiki/Degree_of_a_polynomial">Degree of a polynomial - Wikipedia</a></li>
+                </ul>
             </details>
         </div>
     </section>
