Fixed missing closing </svg> tag

--- a/renderer/units/Emoji Data Finder/import.html
+++ b/renderer/units/Emoji Data Finder/import.html
@@ -18,7 +18,7 @@
                         <label title="Whole Word"><input type="checkbox" class="whole-word"><svg><use href="/images/search.svg#whole-word-icon"></use></svg></label>
                     </span>
                     <span class="action">
-                        <label title="Regular Expression"><input type="checkbox" class="use-regex"><svg><use href="/images/search.svg#use-regex-icon"></use></label>
+                        <label title="Regular Expression"><input type="checkbox" class="use-regex"><svg><use href="/images/search.svg#use-regex-icon"></use></svg></label>
                     </span>
                     <span class="action">
                         <button type="button" class="search-button">Search</button>
