--- a/renderer/units/Emoji Data Finder/import.html
+++ b/renderer/units/Emoji Data Finder/import.html
@@ -38,44 +38,7 @@
         <div class="accent-panel">
             <details class="references">
                 <summary>References</summary>
-                <ul>
-                    <li><a href="https://mathiasbynens.be/notes/es-unicode-property-escapes">Unicode property escapes in JavaScript regular expressions · Mathias Bynens</a></li>
-                    <li><a href="https://github.com/mathiasbynens/regexpu-core">GitHub - mathiasbynens/regexpu-core: regexpu’s core functionality</a></li>
-                    <li><a href="https://github.com/mathiasbynens/regexpu-core/blob/master/property-escapes.md">regexpu-core/property-escapes.md at master · mathiasbynens/regexpu-core · GitHub</a></li>
-                </ul>
-                <ul>
-                    <li><a href="https://www.unicode.org/emoji/">Unicode Emoji</a></li>
-                    <li><a href="https://www.unicode.org/emoji/charts/">Unicode Emoji Charts</a></li>
-                    <li><a href="https://www.unicode.org/emoji/format.html">Unicode Emoji Chart Format</a></li>
-                    <li><a href="https://www.unicode.org/emoji/charts/emoji-list.html">Emoji List</a></li>
-                    <li><a href="https://www.unicode.org/emoji/charts/full-emoji-list.html">Full Emoji List</a></li>
-                    <li><a href="https://www.unicode.org/emoji/charts/emoji-ordering.html">Emoji Ordering</a></li>
-                    <li><a href="https://www.unicode.org/emoji/charts/emoji-versions.html">Emoji Versions</a></li>
-                    <li><a href="https://www.unicode.org/emoji/charts/emoji-versions-sources.html">Emoji Versions &amp; Sources</a></li>
-                    <li><a href="https://www.unicode.org/emoji/charts/emoji-variants.html">Emoji Presentation Sequences</a></li>
-                    <li><a href="https://www.unicode.org/emoji/charts/emoji-zwj-sequences.html">Recommended Emoji ZWJ Sequences</a></li>
-                </ul>
-                <ul>
-                    <li><a href="https://www.unicode.org/reports/tr51/">UTS #51: Unicode Emoji</a></li>
-                    <li><a href="https://www.unicode.org/faq/emoji_dingbats.html">FAQ - Emoji &amp; Pictographs</a></li>
-                </ul>
-                <ul>
-                    <li><a href="http://cldr.unicode.org/translation">Translation Guidelines - CLDR - Unicode Common Locale Data Repository</a></li>
-                    <li><a href="http://cldr.unicode.org/translation/country-names">Country/Region Names - CLDR - Unicode Common Locale Data Repository</a></li>
-                    <li><a href="http://cldr.unicode.org/translation/short-names-and-keywords">Characters Names and Keywords (Emoji) - CLDR - Unicode Common Locale Data Repository</a></li>
-                </ul>
-                <ul>
-                    <li><a href="https://unicode.org/repos/cldr/trunk/specs/ldml/tr35-general.html#Annotations">UTS #35: Unicode LDML: General - 14 Annotations and Labels</a></li>
-                    <li><a href="http://cldr.unicode.org/index/downloads/cldr-30">CLDR 30 Release Note - CLDR - Unicode Common Locale Data Repository</a></li>
-                </ul>
-                <ul>
-                    <li><a href="https://en.wikipedia.org/wiki/Emoji">Emoji - Wikipedia</a></li>
-                </ul>
-                <ul>
-                    <li><a href="http://xahlee.info/comp/unicode_index.html">Unicode Characters ∑ ♥ 😄</a></li>
-                    <li><a href="https://www.charbase.com/block/miscellaneous-symbols-and-pictographs">Charbase: Miscellaneous Symbols And Pictographs</a></li>
-                    <li><a href="https://emojipedia.org/">📙 Emojipedia — 😃 Home of Emoji Meanings 💁👌🎍😍</a></li>
-                </ul>
+                <div class="links"></div>
             </details>
         </div>
     </section>
