--- a/renderer/units/Technical Definitions/import.html
+++ b/renderer/units/Technical Definitions/import.html
@@ -1,6 +1,12 @@
 <template>
     <section id="technical-definitions-unit">
-        <div class="definition-containers"></div>
+        <div class="plain-panel">
+            <div class="interface">
+                <select class="select-category">
+                </select>
+            </div>
+            <div class="definitions-container"></div>
+        </div>
         <div class="accent-panel">
             <details class="references">
                 <summary>References</summary>
