Updated app to version 1.8.2

--- a/renderer/units/CIDR Calculator/import.html
+++ b/renderer/units/CIDR Calculator/import.html
@@ -13,14 +13,7 @@
         <div class="accent-panel">
             <details class="references">
                 <summary>References</summary>
-                <ul>
-                    <li><a href="https://en.wikipedia.org/wiki/Classless_Inter-Domain_Routing">Classless Inter-Domain Routing - Wikipedia</a></li>
-                </ul>
-                <ul>
-                    <li><a href="http://www.faqs.org/rfcs/rfc1817.html">RFC 1817 - CIDR and Classful Routing (RFC1817)</a></li>
-                    <li><a href="http://www.faqs.org/rfcs/rfc1518.html">RFC 1518 - An Architecture for IP Address Allocation with CIDR (RFC1518)</a></li>
-                    <li><a href="http://www.faqs.org/rfcs/rfc1519.html">RFC 1519 - Classless Inter-Domain Routing (CIDR): an Address Ass (RFC1519)</a></li>
-                </ul>
+                <div class="links"></div>
             </details>
         </div>
     </section>
