--- a/renderer/units/ISO Country Codes/import.html
+++ b/renderer/units/ISO Country Codes/import.html
@@ -10,10 +10,7 @@
         <div class="accent-panel">
             <details class="references">
                 <summary>References</summary>
-                <ul>
-                    <li><a href="https://en.wikipedia.org/wiki/ISO_3166-1">ISO 3166-1 - Wikipedia</a></li>
-                    <li><a lang="fr" href="https://fr.wikipedia.org/wiki/ISO_3166-1">ISO 3166-1 — Wikipédia</a></li>
-                </ul>
+                <div class="links"></div>
             </details>
         </div>
     </section>
