--- a/renderer/units/Jabberwocky/import.html
+++ b/renderer/units/Jabberwocky/import.html
@@ -4,10 +4,7 @@
         <div class="accent-panel">
             <details class="references">
                 <summary>References</summary>
-                <ul>
-                    <li><a href="https://en.wikipedia.org/wiki/Jabberwocky">Jabberwocky - Wikipedia</a></li>
-                    <li><a href="https://en.wikipedia.org/wiki/Through_the_Looking-Glass">Through the Looking-Glass - Wikipedia</a></li>
-                </ul>
+                <div class="links"></div>
             </details>
         </div>
     </section>
