--- a/renderer/units/LaTeX Math Renderer/import.html
+++ b/renderer/units/LaTeX Math Renderer/import.html
@@ -40,15 +40,7 @@
         <div class="accent-panel">
             <details class="references">
                 <summary>References</summary>
-                <ul>
-                    <li><a href="https://khan.github.io/KaTeX/">KaTeX – The fastest math typesetting library for the web</a></li>
-                    <li><a href="https://github.com/Khan/KaTeX">GitHub - Khan/KaTeX: Fast math typesetting for the web.</a></li>
-                    <li><a href="https://www.intmath.com/blog/mathematics/katex-a-new-way-to-display-math-on-the-web-9445">KaTeX - a new way to display math on the Web</a></li>
-                    <li><a href="https://www.intmath.com/cg5/katex-mathjax-comparison.php">KaTeX and MathJax Comparison Demo</a></li>
-                    <li><a href="https://khan.github.io/KaTeX/function-support.html">Function Support in KaTeX</a></li>
-                    <li><a href="https://en.wikibooks.org/wiki/LaTeX/Mathematics">LaTeX/Mathematics - Wikibooks, open books for an open world</a></li>
-                    <li><a href="https://en.wikibooks.org/wiki/LaTeX/Advanced_Mathematics">LaTeX/Advanced Mathematics - Wikibooks, open books for an open world</a></li>
-                </ul>
+                <div class="links"></div>
             </details>
         </div>
     </section>
