--- a/renderer/units/Roman Numerals/import.html
+++ b/renderer/units/Roman Numerals/import.html
@@ -35,14 +35,7 @@
             </details>
             <details class="references">
                 <summary>References</summary>
-                <ul>
-                    <li><a href="https://en.wikipedia.org/wiki/Roman_numerals">Roman numerals - Wikipedia</a></li>
-                    <li><a href="https://simple.wikipedia.org/wiki/Roman_numeral">Roman numeral - Simple English Wikipedia, the free encyclopedia</a></li>
-                    <li><a href="https://www.knowtheromans.co.uk/Categories/SubCatagories/RomanNumerals/">Roman Numerals: The Epic Guide. | Know the Romans</a></li>
-                </ul>
-                <ul>
-                    <li><a href="https://en.wikipedia.org/wiki/Arabic_numerals">Arabic numerals - Wikipedia</a></li>
-                </ul>
+                <div class="links"></div>
             </details>
         </div>
     </section>
