--- a/renderer/units/System Information/import.html
+++ b/renderer/units/System Information/import.html
@@ -4,24 +4,7 @@
         <div class="accent-panel">
             <details class="references">
                 <summary>References</summary>
-                <ul>
-                    <li><a href="https://electron.atom.io/docs/all/">All of the Documentation | Electron</a></li>
-                    <li><a href="https://electron.atom.io/docs/">Documentation | Electron</a></li>
-                    <li><a href="https://electron.atom.io/docs/api/app/">app | Electron</a></li>
-                    <li><a href="https://electron.atom.io/docs/api/browser-window/">BrowserWindow | Electron</a></li>
-                    <li><a href="https://electron.atom.io/docs/api/process/">process | Electron</a></li>
-                    <li><a href="https://electron.atom.io/docs/api/remote/">remote | Electron</a></li>
-                    <li><a href="https://electron.atom.io/docs/api/screen/">screen | Electron</a></li>
-                </ul>
-                <ul>
-                    <li><a href="https://nodejs.org/api/">Index | Node.js Documentation</a></li>
-                    <li><a href="https://nodejs.org/api/os.html">OS | Node.js Documentation</a></li>
-                    <li><a href="https://nodejs.org/api/process.html">Process | Node.js Documentation</a></li>
-                </ul>
-                <ul>
-                    <li><a href="https://developer.mozilla.org/en-US/docs/Web/API">Web APIs | MDN</a></li>
-                    <li><a href="https://developer.mozilla.org/en-US/docs/Web/API/Navigator">Navigator - Web APIs | MDN</a></li>
-                </ul>
+                <div class="links"></div>
             </details>
         </div>
     </section>
