--- a/renderer/units/Technical Definitions/import.html
+++ b/renderer/units/Technical Definitions/import.html
@@ -10,30 +10,7 @@
         <div class="accent-panel">
             <details class="references">
                 <summary>References</summary>
-                <ul>
-                    <li><a href="https://developer.mozilla.org/en-US/docs/Web/HTML/Element/dl">&lt;dl&gt;: The Description List element - HTML | MDN</a></li>
-                    <li><a href="https://developer.mozilla.org/en-US/docs/Web/HTML/Element/dt">&lt;dt&gt;: The Description Term element - HTML | MDN</a></li>
-                    <li><a href="https://developer.mozilla.org/en-US/docs/Web/HTML/Element/dd">&lt;dd&gt;: The Description Details element - HTML | MDN</a></li>
-                </ul>
-                <ul>
-                    <li><a href="https://en.wikipedia.org/wiki/Technical_definition">Technical definition - Wikipedia</a></li>
-                </ul>
-                <ul>
-                    <li><a href="https://en.wikipedia.org/wiki/List_of_computing_and_IT_abbreviations">List of computing and IT abbreviations - Wikipedia</a></li>
-                    <li><a href="https://en.wikipedia.org/wiki/List_of_information_technology_initialisms">List of information technology initialisms - Wikipedia</a></li>
-                </ul>
-                <ul>
-                    <li><a href="https://en.wikipedia.org/wiki/MacOS">macOS - Wikipedia</a></li>
-                    <li><a href="https://en.wikipedia.org/wiki/MacOS_version_history">macOS version history - Wikipedia</a></li>
-                </ul>
-                <ul>
-                    <li><a href="https://en.wikipedia.org/wiki/Unit_prefix">Unit prefix - Wikipedia</a></li>
-                    <li><a href="https://en.wikipedia.org/wiki/Metric_prefix">Metric prefix - Wikipedia</a></li>
-                    <li><a href="https://en.wikipedia.org/wiki/Decimal_separator">Decimal separator - Wikipedia</a></li>
-                </ul>
-                <ul>
-                    <li><a href="https://en.wikipedia.org/wiki/Degree_of_a_polynomial">Degree of a polynomial - Wikipedia</a></li>
-                </ul>
+                <div class="links"></div>
             </details>
         </div>
     </section>
