--- a/renderer/units/Unicode Inspector/import.html
+++ b/renderer/units/Unicode Inspector/import.html
@@ -11,7 +11,7 @@
                 </span>
             </div>
             <div class="characters-to-code-points">
-                <textarea class="input-characters" rows="2"></textarea>
+                <textarea class="input-characters"></textarea>
                 <input class="output-code-points" type="text" readonly>
             </div>
             <div class="output-characters-data"></div>
@@ -33,7 +33,7 @@
             </div>
             <div class="code-points-to-characters">
                 <input class="input-code-points" type="text">
-                <textarea class="output-characters" rows="2" readonly></textarea>
+                <textarea class="output-characters" readonly></textarea>
             </div>
             <div class="output-code-points-data"></div>
         </div>
