--- a/renderer/units/Emoji Data Finder/import.html
+++ b/renderer/units/Emoji Data Finder/import.html
@@ -25,7 +25,7 @@
                     </span>
                 </span>
             </div>
-            <textarea class="input-string" rows="2"></textarea>
+            <textarea class="input-string"></textarea>
             <div class="actions">
                 <span class="action hit-count">
                 </span>
