--- a/renderer/units/IETF Language Tags/import.html
+++ b/renderer/units/IETF Language Tags/import.html
@@ -4,30 +4,7 @@
         <div class="accent-panel">
             <details class="references">
                 <summary>References</summary>
-                <ul>
-                    <li><a href="https://en.wikipedia.org/wiki/IETF_language_tag">IETF language tag - Wikipedia</a></li>
-                    <li><a href="https://tools.ietf.org/html/bcp47">BCP 47 - Tags for Identifying Languages</a></li>
-                    <li><a href="https://www.iana.org/assignments/language-subtag-registry/language-subtag-registry">Language Subtag Registry — IANA</a></li>
-                </ul>
-                <ul>
-                    <li><a href="https://www.unicode.org/cldr/utility/languageid.jsp">Unicode Utilities: Unicode Language Identifers and BCP47</a></li>
-                    <li><a href="https://r12a.github.io/app-subtags/">Language subtag lookup app</a></li>
-                    <li><a href="http://schneegans.de/lv/">BCP 47 Validator</a></li>
-                </ul>
-                <ul>
-                    <li><a href="https://www.w3.org/International/getting-started/language">Language on the Web</a></li>
-                    <li><a href="https://www.w3.org/International/articles/language-tags/">Language tags in HTML and XML</a></li>
-                    <li><a href="https://www.w3.org/International/questions/qa-html-language-declarations">Declaring language in HTML</a></li>
-                    <li><a href="https://www.w3.org/International/questions/qa-lang-why">Why use the language attribute?</a></li>
-                    <li><a href="https://www.w3.org/International/questions/qa-choosing-language-tags">Choosing a language tag</a></li>
-                    <li><a href="https://www.w3.org/International/questions/qa-no-language">Tagging text with no language</a></li>
-                    <li><a href="https://www.w3.org/International/tutorials/language-decl/">Working with language in HTML (tutorial)</a></li>
-                    <li><a href="https://www.w3.org/TR/ltli/">Language Tags and Locale Identifiers for the World Wide Web</a></li>
-                </ul>
-                <ul>
-                    <li><a href="https://github.com/wooorm/bcp-47">GitHub - wooorm/bcp-47: Parse and stringify BCP 47 language tags</a></li>
-                    <li><a href="https://github.com/sebinsua/ietf-language-tag-regex">GitHub - sebinsua/ietf-language-tag-regex: Regular expressions for matching IETF language tags (BCP 47)</a></li>
-                </ul>
+                <div class="links"></div>
             </details>
         </div>
     </section>
