--- a/renderer/units/ISO Language Codes/import.html
+++ b/renderer/units/ISO Language Codes/import.html
@@ -10,10 +10,7 @@
         <div class="accent-panel">
             <details class="references">
                 <summary>References</summary>
-                <ul>
-                    <li><a href="https://en.wikipedia.org/wiki/List_of_ISO_639-1_codes">List of ISO 639-1 codes - Wikipedia</a></li>
-                    <li><a lang="fr" href="https://fr.wikipedia.org/wiki/Liste_des_codes_ISO_639-1">Liste des codes ISO 639-1 — Wikipédia</a></li>
-                </ul>
+                <div class="links"></div>
             </details>
         </div>
     </section>
