--- a/renderer/units/ISO Script Codes/import.html
+++ b/renderer/units/ISO Script Codes/import.html
@@ -10,18 +10,7 @@
         <div class="accent-panel">
             <details class="references">
                 <summary>References</summary>
-                <ul>
-                    <li><a href="https://www.unicode.org/iso15924/codelists.html">ISO 15924 - Code Lists</a></li>
-                    <li><a href="https://www.unicode.org/iso15924/iso15924-codes.html">ISO 15924 - Alphabetical Code List</a></li>
-                </ul>
-                <ul>
-                    <li><a href="https://en.wikipedia.org/wiki/ISO_15924">ISO 15924 - Wikipedia</a></li>
-                    <li><a lang="fr" href="https://fr.wikipedia.org/wiki/ISO_15924">ISO 15924 — Wikipédia</a></li>
-                </ul>
-                <ul>
-                    <li><a href="https://en.wikipedia.org/wiki/Writing_system">Writing system - Wikipedia</a></li>
-                    <li><a href="https://en.wikipedia.org/wiki/List_of_writing_systems">List of writing systems - Wikipedia</a></li>
-                </ul>
+                <div class="links"></div>
             </details>
         </div>
     </section>
