--- a/renderer/units/JSON Formatter/import.html
+++ b/renderer/units/JSON Formatter/import.html
@@ -30,25 +30,7 @@
         <div class="accent-panel">
             <details class="references">
                 <summary>References</summary>
-                <ul>
-                    <li><a href="https://en.wikipedia.org/wiki/JSON">JSON - Wikipedia</a></li>
-                    <li><a href="https://www.json.org/">JSON - Introducing JSON</a></li>
-                    <li><a href="https://www.json.org/example.html">JSON Example</a></li>
-                    <li><a href="https://tools.ietf.org/html/rfc8259">RFC 8259 - The JavaScript Object Notation (JSON) Data Interchange Format</a></li>
-                    <li><a href="https://www.ecma-international.org/publications/standards/Ecma-404.htm">Standard ECMA-404 - The JSON Data Interchange Format</a></li>
-                </ul>
-                <ul>
-                    <li><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/JSON">JSON - JavaScript | MDN</a></li>
-                    <li><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/JSON/parse">JSON.parse() - JavaScript | MDN</a></li>
-                    <li><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/JSON/stringify">JSON.stringify() - JavaScript | MDN</a></li>
-                    <li><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Errors/JSON_bad_parse">SyntaxError: JSON.parse: bad parsing - JavaScript | MDN</a></li>
-                </ul>
-                <ul>
-                    <li><a href="https://jsonlint.com/">JSONLint - The JSON Validator</a></li>
-                </ul>
-                <ul>
-                    <li><a href="https://devgadget.com/json-formatter.html">JSON Formatter</a></li>
-                </ul>
+                <div class="links"></div>
             </details>
         </div>
     </section>
