--- a/renderer/units/JavaScript Runner/import.html
+++ b/renderer/units/JavaScript Runner/import.html
@@ -40,25 +40,7 @@
             </details>
             <details class="references">
                 <summary>References</summary>
-                <ul>
-                    <li><a href="https://electronjs.org/docs">Documentation | Electron</a></li>
-                </ul>
-                <ul>
-                    <li><a href="https://nodejs.org/api/">Index | Node.js Documentation</a></li>
-                    <li><a href="https://nodejs.org/api/child_process.html">Child Process | Node.js Documentation</a></li>
-                </ul>
-                <ul>
-                    <li><a href="https://developer.mozilla.org/en-US/docs/Web/API/Document_Object_Model">Document Object Model (DOM) - Web APIs | MDN</a></li>
-                    <li><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference">JavaScript reference - JavaScript | MDN</a></li>
-                    <li><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Functions">Functions - JavaScript | MDN</a></li>
-                    <li><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Function">Function - JavaScript | MDN</a></li>
-                    <li><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Strict_mode">Strict mode - JavaScript | MDN</a></li>
-                </ul>
-                <ul>
-                    <li><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/JSON/parse">JSON.parse() - JavaScript | MDN</a></li>
-                    <li><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/JSON/stringify">JSON.stringify() - JavaScript | MDN</a></li>
-                    <li><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Errors/JSON_bad_parse">SyntaxError: JSON.parse: bad parsing - JavaScript | MDN</a></li>
-                </ul>
+                <div class="links"></div>
             </details>
         </div>
     </section>
