--- a/renderer/units/List of U.S. States/import.html
+++ b/renderer/units/List of U.S. States/import.html
@@ -9,11 +9,7 @@
         <div class="accent-panel">
             <details class="references">
                 <summary>References</summary>
-                <ul>
-                    <li><a href="https://en.wikipedia.org/wiki/List_of_states_and_territories_of_the_United_States">List of states and territories of the United States - Wikipedia</a></li>
-                    <li><a href="https://simple.wikipedia.org/wiki/List_of_U.S._states">List of U.S. states - Simple English Wikipedia, the free encyclopedia</a></li>
-                    <li><a href="https://simple.wikipedia.org/wiki/List_of_U.S._state_capitals">List of U.S. state capitals - Simple English Wikipedia, the free encyclopedia</a></li>
-                </ul>
+                <div class="links"></div>
             </details>
         </div>
     </section>
