Updated app to version 1.10.2

--- a/renderer/units/JSON Formatter/import.html
+++ b/renderer/units/JSON Formatter/import.html
@@ -3,10 +3,10 @@
         <div class="plain-panel">
             <div class="actions">
                 <span class="action">
-                    <button type="button" class="clear-button">Clear</button>
+                    <button class="clear-button" type="button">Clear</button>
                 </span>
                 <span class="action">
-                    <button type="button" class="pull-down-menu samples-button">Samples</button>
+                    <button class="pull-down-menu samples-button" type="button">Samples</button>
                 </span>
             </div>
             <label>JSON:<textarea class="input-string" rows="12"></textarea></label>
@@ -19,10 +19,10 @@
                     </select>
                 </span>
                 <span class="option">
-                    <label title=""><input type="checkbox" class="balanced-spacing">&nbsp;Balanced Spacing</label>
+                    <label title=""><input class="balanced-spacing" type="checkbox">&nbsp;Balanced Spacing</label>
                 </span>
                 <span class="option">
-                    <label title=""><input type="checkbox" class="final-line-break">&nbsp;Final Line Break</label>
+                    <label title=""><input class="final-line-break" type="checkbox">&nbsp;Final Line Break</label>
                 </span>
             </div>
             <textarea class="output-string" rows="12" readonly></textarea>
