--- a/renderer/units/JavaScript Runner/import.html
+++ b/renderer/units/JavaScript Runner/import.html
@@ -4,25 +4,25 @@
             <div class="actions">
                 <span class="action-group">
                     <span class="action">
-                        <button type="button" class="clear-button">Clear</button>
+                        <button class="clear-button" type="button">Clear</button>
                     </span>
                     <span class="action">
-                        <button type="button" class="pull-down-menu samples-button">Samples</button>
+                        <button class="pull-down-menu samples-button" type="button">Samples</button>
                     </span>
                 </span>
                 <span class="action-group">
                     <span class="action">
-                        <button type="button" class="load-button">Load...</button>
+                        <button class="load-button" type="button">Load...</button>
                     </span>
                     <span class="action">
-                        <button type="button" class="save-button">Save...</button>
+                        <button class="save-button" type="button">Save...</button>
                     </span>
                 </span>
             </div>
             <label>Code:<textarea class="code-string" rows="12"></textarea></label>
             <div class="interface">
                 <span class="option">
-                    <button type="button" class="run-button">Run</button>
+                    <button class="run-button" type="button">Run</button>
                 </span>
             </div>
             <label>Output:<textarea class="output-string" rows="12" readonly></textarea></label>
