--- a/renderer/units/LaTeX Math Renderer/import.html
+++ b/renderer/units/LaTeX Math Renderer/import.html
@@ -4,31 +4,31 @@
             <div class="actions">
                 <span class="action-group">
                     <span class="action">
-                        <button type="button" class="clear-button">Clear</button>
+                        <button class="clear-button" type="button">Clear</button>
                     </span>
                     <span class="action">
-                        <button type="button" class="pull-down-menu samples-button">Samples</button>
+                        <button class="pull-down-menu samples-button" type="button">Samples</button>
                     </span>
                 </span>
                 <span class="action-group">
                     <span class="action">
-                        <button type="button" class="load-button">Load...</button>
+                        <button class="load-button" type="button">Load...</button>
                     </span>
                     <span class="action">
-                        <button type="button" class="save-button">Save...</button>
+                        <button class="save-button" type="button">Save...</button>
                     </span>
                 </span>
             </div>
             <label>LaTeX:<textarea class="latex-formula" rows="10"></textarea></label>
             <div class="options">
                 <span class="option">
-                    <label title="If checked, the math will be rendered in display mode; if unchecked, the math will be rendered in inline mode."><input type="checkbox" class="display-mode">&nbsp;Display Mode</label>
+                    <label title="If checked, the math will be rendered in display mode; if unchecked, the math will be rendered in inline mode."><input class="display-mode" type="checkbox">&nbsp;Display Mode</label>
                 </span>
                 <span class="option">
-                    <label title="If checked, \color will work like LaTeX's \textcolor, and take two arguments; if unchecked, \color will work like LaTeX's \color, and take one argument."><input type="checkbox" class="text-color">&nbsp;Color is Text Color</label>
+                    <label title="If checked, \color will work like LaTeX's \textcolor, and take two arguments; if unchecked, \color will work like LaTeX's \color, and take one argument."><input class="text-color" type="checkbox">&nbsp;Color is Text Color</label>
                 </span>
                 <span class="option">
-                    <label title="If checked, will throw a ParseError when it encounters an unsupported command; if unchecked, will render the unsupported command as text in color."><input type="checkbox" class="throw-on-error">&nbsp;Throw on Error</label>
+                    <label title="If checked, will throw a ParseError when it encounters an unsupported command; if unchecked, will render the unsupported command as text in color."><input class="throw-on-error" type="checkbox">&nbsp;Throw on Error</label>
                 </span>
             </div>
             <label>Rendering:
