--- a/renderer/units/Text Converter/import.html
+++ b/renderer/units/Text Converter/import.html
@@ -2,23 +2,23 @@
     <section id="text-converter-unit">
         <div class="plain-panel">
             <div class="tab-bar">
-                <label class="tab-label"><input type="radio" class="tab-radio"><span>Text Encoder</span></label>
-                <label class="tab-label"><input type="radio" class="tab-radio"><span>Text Decoder</span></label>
+                <label class="tab-label"><input class="tab-radio" type="radio"><span>Text Encoder</span></label>
+                <label class="tab-label"><input class="tab-radio" type="radio"><span>Text Decoder</span></label>
             </div>
             <div class="tab-panes">
                 <div class="tab-pane">
                     <div class="actions">
                         <span class="action-group">
                             <span class="action">
-                                <button type="button" class="encoder-clear-button">Clear</button>
+                                <button class="encoder-clear-button" type="button">Clear</button>
                             </span>
                         </span>
                         <span class="action-group">
                             <span class="action">
-                                <button type="button" class="encoder-load-button">Load...</button>
+                                <button class="encoder-load-button" type="button">Load...</button>
                             </span>
                             <span class="action">
-                                <button type="button" class="encoder-save-button">Save...</button>
+                                <button class="encoder-save-button" type="button">Save...</button>
                             </span>
                         </span>
                     </div>
@@ -27,46 +27,46 @@
                         <span class="option">
                             <select class="encoder-conversion-type">
                                 <option value="json">JSON String</option>
+                                <option value="hex">Hex String</option>
                                 <option value="base64">Base64 String</option>
-                                <option value="hex">Hexadecimal String</option>
                             </select>
                         </span>
                         <span class="action">
-                            <button type="button" class="encoder-output-save-button">Save...</button>
+                            <button class="encoder-output-save-button" type="button">Save...</button>
                         </span>
                     </div>
-                    <label>Encoded String:<textarea class="encoder-output-string" rows="10" readonly></textarea></label>
+                    <label>Quoted String:<textarea class="encoder-output-string" rows="10" readonly></textarea></label>
                 </div>
                 <div class="tab-pane">
                     <div class="actions">
                         <span class="action-group">
                             <span class="action">
-                                <button type="button" class="decoder-clear-button">Clear</button>
+                                <button class="decoder-clear-button" type="button">Clear</button>
                             </span>
                         </span>
                         <span class="action-group">
                             <span class="action">
-                                <button type="button" class="decoder-load-button">Load...</button>
+                                <button class="decoder-load-button" type="button">Load...</button>
                             </span>
                             <span class="action">
-                                <button type="button" class="decoder-save-button">Save...</button>
+                                <button class="decoder-save-button" type="button">Save...</button>
                             </span>
                         </span>
                     </div>
-                    <label>String:<textarea class="decoder-input-string" rows="10"></textarea></label>
+                    <label>Quoted String:<textarea class="decoder-input-string" rows="10"></textarea></label>
                     <div class="options">
                         <span class="option">
                             <select class="decoder-conversion-type">
                                 <option value="json">JSON String</option>
+                                <option value="hex">Hex String</option>
                                 <option value="base64">Base64 String</option>
-                                <option value="hex">Hexadecimal String</option>
                             </select>
                         </span>
                         <span class="action">
-                            <button type="button" class="decoder-output-save-button">Save...</button>
+                            <button class="decoder-output-save-button" type="button">Save...</button>
                         </span>
                     </div>
-                    <label>Decoded Text:<textarea class="decoder-output-string" rows="10" readonly></textarea></label>
+                    <label>Text:<textarea class="decoder-output-string" rows="10" readonly></textarea></label>
                 </div>
             </div>
         </div>
