--- a/renderer/index.html
+++ b/renderer/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
+        <title>Vade Mecum Shelf</title>
         <link rel="stylesheet" href="custom.css">
         <link rel="stylesheet" href="styles.css">
     </head>
