Updated app to version 3.0.0

--- a/renderer/index.html
+++ b/renderer/index.html
@@ -3,6 +3,9 @@
     <head>
         <meta charset="utf-8">
         <title>Vade Mecum Shelf</title>
+        <link rel="preload" href="cjk-fonts/NotoSansCJKjp-Regular.otf" as="font">
+        <link rel="preload" href="cjk-fonts/NotoSansCJKsc-Regular.otf" as="font">
+        <link rel="preload" href="cjk-fonts/NotoSansCJKtc-Regular.otf" as="font">
         <link rel="stylesheet" href="custom.css">
         <link rel="stylesheet" href="styles.css">
     </head>
