--- a/license-index.html
+++ b/license-index.html
@@ -27,7 +27,7 @@
         <div class="contents">
             <p class="header">MIT License</p>
             <p>
-                Copyright (c) 2017-2020 Michel MARIANI
+                Copyright (c) 2017-2020 Michel Mariani
             </p>
             <p>
                 Permission is hereby granted, free of charge, to any person obtaining a copy
@@ -52,8 +52,8 @@
             </p>
         </div>
         <script>
-            document.body.addEventListener ('click', (event) => { window.close (); });
-            document.body.addEventListener ('keydown', (event) => { if (event.key === 'Escape') window.close (); });
+            window.addEventListener ('click', (event) => { event.preventDefault (); window.close (); });
+            window.addEventListener ('keydown', (event) => { if (event.key === 'Escape') { event.preventDefault (); window.close (); } });
         </script>
     </body>
 </html>
